Changes for Filter Effects specification
----------------------------------------

2013-05-22  Dirk Schulze  <dschulze@adobe.com>
- Clarify that <defs> elements are not going to be masked/clipped.
- Added section about changes since the last publication.

2013-05-15  Dirk Schulze  <dschulze@adobe.com>
- Prepare specification for next WD (2).

2013-05-09  Dirk Schulze  <dschulze@adobe.com>
- Prepare specification for next WD.

2013-04-23  Dirk Schulze  <dschulze@adobe.com>
- Replace mix value none with auto.
- Clarify that Custom Shader is a host language for shaders
  and an extension of Custom Filter Function.
- Remove unnecessary shader uniforms.

2013-04-20  Dirk Schulze  <dschulze@adobe.com>
- Editorial changes.
- Replace texture with image function from CSS3 Images.

2013-04-10  Dirk Schulze  <dschulze@adobe.com>
- Editorial changes after the last edit.

2013-04-10  Dirk Schulze  <dschulze@adobe.com>
- Remove section about auto varying. Should be compatible to WebGL.

2013-04-10  Dirk Schulze  <dschulze@adobe.com>
- Remove a_texCoord, a_mesCoord, u_tileSize, u_projectionMatrix variables and attributes.
These turned out to be implementation specifics that can be abstracted more from the user.
- The shader coordinate system changes to a range from [0,1] for better compatibility to WebGL.

2013-04-10  Dirk Schulze  <dschulze@adobe.com>
- Remove u_meshBox from spec. With the removal of <box> argument for
shaders not necessary anymore.

2013-03-26  Dirk Schulze  <dschulze@adobe.com>
- Clarify relation of 'enable-background' and 'isolation' properties.

2013-03-15  Dirk Schulze  <dschulze@adobe.com>
- Underline that the texture uniform is in device pixel.

2013-03-12  Dirk Schulze  <dschulze@adobe.com>
- Add conformance section.

2013-03-08  Dirk Schulze  <dschulze@adobe.com>
- Fixed typos. Added issue to support previous filter primitive
  for custom filter.

2013-02-28  Dirk Schulze  <dschulze@adobe.com>
- Added attribute description to feCustomSource element.
