@@ -2016,13 +2016,13 @@ Other references</h3>
 </ul>
 <p>See detailed list of changes in the <a href="ChangeLog">ChangeLog</a>.</p>
 
-<h2 class="no-num" id="index">
-Index</h2>
-<!--index-->
-
 <h2 class="no-num" id="property-index">
 Property index</h2>
 <!-- properties -->
+
+<h2 class="no-num" id="index">
+Index</h2>
+<!--index-->
 
 </body>
 </html>
