@@ -11,7 +11,7 @@
    rel=dcterms.rights>
   <meta content="CSS Masking" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-05-22 name=dcterms.date>
+  <meta content=2013-05-23 name=dcterms.date>
   <meta content="Dirk Schulze" name=dcterms.creator>
   <meta content="Brian Birtles" name=dcterms.creator>
   <meta
@@ -36,14 +36,14 @@
 
    <h1>CSS Masking Level 1</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 22 May 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 23 May 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-css-masking-20130522/-->
+     <!--http://www.w3.org/TR/2013/WD-css-masking-20130523/-->
 
     <dt>Latest version:
 
@@ -284,9 +284,9 @@
 
    <li class=no-num><a href="#changes">Changes since last publication</a>
 
-   <li class=no-num><a href="#index"> Index</a>
-
    <li class=no-num><a href="#property-index"> Property index</a>
+
+   <li class=no-num><a href="#index"> Index</a>
   </ul>
   <!--end-toc-->
 
@@ -3919,10 +3919,10 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    <dt id=CSS3VAL>[CSS3VAL]
 
    <dd>Håkon Wium Lie; Tab Atkins; Elika J. Etemad. <a
-    href="http://www.w3.org/TR/2012/CR-css3-values-20120828/"><cite>CSS
-    Values and Units Module Level 3.</cite></a> 28 August 2012. W3C Candidate
+    href="http://www.w3.org/TR/2013/CR-css3-values-20130404/"><cite>CSS
+    Values and Units Module Level 3.</cite></a> 4 April 2013. W3C Candidate
     Recommendation. (Work in progress.) URL: <a
-    href="http://www.w3.org/TR/2012/CR-css3-values-20120828/">http://www.w3.org/TR/2012/CR-css3-values-20120828/</a>
+    href="http://www.w3.org/TR/2013/CR-css3-values-20130404/">http://www.w3.org/TR/2013/CR-css3-values-20130404/</a>
    </dd>
    <!---->
 
@@ -3946,11 +3946,11 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
 
    <dt id=SELECTORS4>[SELECTORS4]
 
-   <dd>Elika J. Etemad. <a
-    href="http://www.w3.org/TR/2012/WD-selectors4-20120823/"><cite>Selectors
-    Level 4.</cite></a> 23 August 2012. W3C Working Draft. (Work in
-    progress.) URL: <a
-    href="http://www.w3.org/TR/2012/WD-selectors4-20120823/">http://www.w3.org/TR/2012/WD-selectors4-20120823/</a>
+   <dd>Elika J. Etemad; Tab Atkins Jr. <a
+    href="http://www.w3.org/TR/2013/WD-selectors4-20130502/"><cite>Selectors
+    Level 4.</cite></a> 2 May 2013. W3C Working Draft. (Work in progress.)
+    URL: <a
+    href="http://www.w3.org/TR/2013/WD-selectors4-20130502/">http://www.w3.org/TR/2013/WD-selectors4-20130502/</a>
    </dd>
    <!---->
 
@@ -4046,220 +4046,6 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
   </ul>
 
   <p>See detailed list of changes in the <a href=ChangeLog>ChangeLog</a>.
-
-  <h2 class=no-num id=index> Index</h2>
-  <!--begin-index-->
-
-  <ul class=indexlist>
-   <li>‘<code class=css>alpha</code>’, <a href="#alpha"
-    title="section 5.2."><strong>5.2.</strong></a>
-
-   <li>authoring tool, <a href="#authoring-tool"
-    title="section 10.1."><strong>10.1.</strong></a>
-
-   <li>‘<code class=css>auto</code>’, <a href="#auto"
-    title="section 5.2."><strong>5.2.</strong></a>
-
-   <li>‘<code class=css>&lt;basic-shape&gt;</code>’, <a
-    href="#ltbasic-shapegt" title="section 7.1."><strong>7.1.</strong></a>
-
-   <li>''border-box''
-    <ul>
-     <li>'mask-clip' value, <a href="#border-box"
-      title="section 5.5."><strong>5.5.</strong></a>
-
-     <li>'mask-origin' value, <a href="#border-box0"
-      title="section 5.6."><strong>5.6.</strong></a>
-    </ul>
-
-   <li>&lt;bottom&gt;, <a href="#ltbottomgt"
-    title="section 7.3."><strong>7.3.</strong></a>
-
-   <li>bounding client rect, <a href="#bounding-client-rect"
-    title="section 4."><strong>4.</strong></a>, <a
-    href="#bounding-client-rect0" title="section 7.1.">7.1.</a>, <a
-    href="#bounding-client-rect1" title="section 7.1.">7.1.</a>, <a
-    href="#bounding-client-rect2" title="section 7.5.">7.5.</a>
-
-   <li>&lt;child-selector&gt;, <a href="#ltchild-selectorgt"
-    title="section 5.1."><strong>5.1.</strong></a>
-
-   <li>clip, <a href="#ClipProperty"
-    title="section 7.3."><strong>7.3.</strong></a>
-
-   <li>clipPath, <a href="#clippath"
-    title="section 7.4."><strong>7.4.</strong></a>
-
-   <li>clip-path, <a href="#clip-path"
-    title="section 7.1."><strong>7.1.</strong></a>
-
-   <li>clip-rule, <a href="#clip-rule"
-    title="section 7.2."><strong>7.2.</strong></a>
-
-   <li>&lt;clip-source&gt;, <a href="#ltclip-sourcegt"
-    title="section 7.1."><strong>7.1.</strong></a>
-
-   <li>‘<code class=css>&lt;compound-selector&gt;</code>’, <a
-    href="#ltcompound-selectorgt"
-    title="section 5.1."><strong>5.1.</strong></a>
-
-   <li>''content-box''
-    <ul>
-     <li>'mask-clip' value, <a href="#content-box"
-      title="section 5.5."><strong>5.5.</strong></a>
-    </ul>
-
-   <li>‘<code class=css>content-box</code>’, <a href="#content-box0"
-    title="section 5.6."><strong>5.6.</strong></a>
-
-   <li>‘<code class=css>evenodd</code>’, <a href="#evenodd"
-    title="section 7.2."><strong>7.2.</strong></a>
-
-   <li>&lt;image&gt;, <a href="#ltimagegt"
-    title="section 5.1."><strong>5.1.</strong></a>
-
-   <li>layers, <a href="#layers" title="section 5.11.1.">5.11.1.</a>
-
-   <li>&lt;left&gt;, <a href="#ltleftgt"
-    title="section 7.3."><strong>7.3.</strong></a>
-
-   <li>local coordinate system, <a href="#local-coordinate-system"
-    title="section 4."><strong>4.</strong></a>
-
-   <li>‘<code class=css>luminance</code>’, <a href="#luminance"
-    title="section 5.2."><strong>5.2.</strong></a>
-
-   <li>mask, <a href="#MaskProperty"
-    title="section 5.8."><strong>5.8.</strong></a>, <a href="#mask"
-    title="section 5.10."><strong>5.10.</strong></a>, <a href="#mask0"
-    title="section 4."><strong>4.</strong></a>
-
-   <li>mask-box-image, <a href="#mask-box-image"
-    title="section 6.6."><strong>6.6.</strong></a>
-
-   <li>mask box image area, <a href="#mask-box-image-area"
-    title="section 4."><strong>4.</strong></a>, <a
-    href="#mask-box-image-area0"
-    title="section 6.4."><strong>6.4.</strong></a>
-
-   <li>mask-box-image-outset, <a href="#mask-box-image-outset"
-    title="section 6.4."><strong>6.4.</strong></a>
-
-   <li>mask-box-image-repeat, <a href="#mask-box-image-repeat"
-    title="section 6.5."><strong>6.5.</strong></a>
-
-   <li>mask-box-image-slice, <a href="#mask-box-image-slice"
-    title="section 6.2."><strong>6.2.</strong></a>
-
-   <li>mask-box-image-source, <a href="#mask-box-image-source"
-    title="section 6.1."><strong>6.1.</strong></a>
-
-   <li>mask-box-image-width, <a href="#mask-box-image-width"
-    title="section 6.3."><strong>6.3.</strong></a>
-
-   <li>mask-clip, <a href="#mask-clip"
-    title="section 5.5."><strong>5.5.</strong></a>
-
-   <li>&lt;mask-image&gt;, <a href="#ltmask-imagegt"
-    title="section 5.1."><strong>5.1.</strong></a>
-
-   <li>mask-image, <a href="#mask-image"
-    title="section 5.1."><strong>5.1.</strong></a>
-
-   <li>mask image area, <a href="#mask-image-area" title="section 6.">6.</a>
-
-   <li>mask images, <a href="#mask-images"
-    title="section 4."><strong>4.</strong></a>
-
-   <li>&lt;mask-layer&gt;, <a href="#ltmask-layergt"
-    title="section 5.8."><strong>5.8.</strong></a>
-
-   <li>mask-origin, <a href="#mask-origin"
-    title="section 5.6."><strong>5.6.</strong></a>
-
-   <li>mask painting area, <a href="#mask-painting-area"
-    title="section 5.5."><strong>5.5.</strong></a>, <a
-    href="#mask-painting-area0" title="section 4."><strong>4.</strong></a>,
-    <a href="#mask-painting-area1" title="section 5.3.">5.3.</a>, <a
-    href="#mask-painting-area2" title="section 5.4.">5.4.</a>
-
-   <li>mask-position, <a href="#mask-position"
-    title="section 4."><strong>4.</strong></a>, <a href="#mask-position0"
-    title="section 5.4."><strong>5.4.</strong></a>
-
-   <li>mask positioning area, <a href="#mask-positioning-area"
-    title="section 5.6."><strong>5.6.</strong></a>, <a
-    href="#mask-positioning-area0" title="section 4."><strong>4.</strong></a>
-
-   <li>&lt;mask-reference&gt;, <a href="#ltmask-referencegt"
-    title="section 5.1."><strong>5.1.</strong></a>
-
-   <li>mask-repeat, <a href="#mask-repeat"
-    title="section 5.3."><strong>5.3.</strong></a>
-
-   <li>mask-size, <a href="#mask-size"
-    title="section 4."><strong>4.</strong></a>, <a href="#mask-size0"
-    title="section 5.7."><strong>5.7.</strong></a>
-
-   <li>&lt;mask-source&gt;, <a href="#ltmask-sourcegt"
-    title="section 5.1."><strong>5.1.</strong></a>
-
-   <li>mask source, <a href="#mask-source"
-    title="section 4."><strong>4.</strong></a>
-
-   <li>mask-source-type, <a href="#mask-source-type"
-    title="section 5.2."><strong>5.2.</strong></a>
-
-   <li>mask-type, <a href="#mask-type"
-    title="section 5.9."><strong>5.9.</strong></a>
-
-   <li>''no-clip''
-    <ul>
-     <li>'mask-clip' value, <a href="#no-clip"
-      title="section 5.5."><strong>5.5.</strong></a>
-    </ul>
-
-   <li>‘<code class=css>nonzero</code>’, <a href="#nonzero"
-    title="section 7.2."><strong>7.2.</strong></a>
-
-   <li>object bounding box units, <a href="#object-bounding-box-units"
-    title="section 4."><strong>4.</strong></a>, <a
-    href="#object-bounding-box-units0" title="section 7.4.">7.4.</a>
-
-   <li>''padding-box''
-    <ul>
-     <li>'mask-clip' value, <a href="#padding-box"
-      title="section 5.5."><strong>5.5.</strong></a>
-
-     <li>'mask-origin' value, <a href="#padding-box0"
-      title="section 5.6."><strong>5.6.</strong></a>
-    </ul>
-
-   <li>renderer, <a href="#renderer"
-    title="section 10.1."><strong>10.1.</strong></a>
-
-   <li>&lt;right&gt;, <a href="#ltrightgt"
-    title="section 7.3."><strong>7.3.</strong></a>
-
-   <li><var>&lt;source-type&gt;</var>, <a href="#ltsource-typegt"
-    title="section 5.2."><strong>5.2.</strong></a>
-
-   <li>style sheet
-    <ul>
-     <li>as conformance class, <a href="#style-sheet"
-      title="section 10.1."><strong>10.1.</strong></a>
-    </ul>
-
-   <li>&lt;top&gt;, <a href="#lttopgt"
-    title="section 7.3."><strong>7.3.</strong></a>
-
-   <li>‘<code class=css>&lt;url&gt;</code>’, <a href="#lturlgt"
-    title="section 5.1."><strong>5.1.</strong></a>
-
-   <li>user coordinate system, <a href="#user-coordinate-system"
-    title="section 4."><strong>4.</strong></a>
-  </ul>
-  <!--end-index-->
 
   <h2 class=no-num id=property-index> Property index</h2>
   <!--begin-properties-->
@@ -4610,6 +4396,220 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
      <td>visual
   </table>
   <!--end-properties-->
+
+  <h2 class=no-num id=index> Index</h2>
+  <!--begin-index-->
+
+  <ul class=indexlist>
+   <li>‘<code class=css>alpha</code>’, <a href="#alpha"
+    title="section 5.2."><strong>5.2.</strong></a>
+
+   <li>authoring tool, <a href="#authoring-tool"
+    title="section 10.1."><strong>10.1.</strong></a>
+
+   <li>‘<code class=css>auto</code>’, <a href="#auto"
+    title="section 5.2."><strong>5.2.</strong></a>
+
+   <li>‘<code class=css>&lt;basic-shape&gt;</code>’, <a
+    href="#ltbasic-shapegt" title="section 7.1."><strong>7.1.</strong></a>
+
+   <li>''border-box''
+    <ul>
+     <li>'mask-clip' value, <a href="#border-box"
+      title="section 5.5."><strong>5.5.</strong></a>
+
+     <li>'mask-origin' value, <a href="#border-box0"
+      title="section 5.6."><strong>5.6.</strong></a>
+    </ul>
+
+   <li>&lt;bottom&gt;, <a href="#ltbottomgt"
+    title="section 7.3."><strong>7.3.</strong></a>
+
+   <li>bounding client rect, <a href="#bounding-client-rect"
+    title="section 4."><strong>4.</strong></a>, <a
+    href="#bounding-client-rect0" title="section 7.1.">7.1.</a>, <a
+    href="#bounding-client-rect1" title="section 7.1.">7.1.</a>, <a
+    href="#bounding-client-rect2" title="section 7.5.">7.5.</a>
+
+   <li>&lt;child-selector&gt;, <a href="#ltchild-selectorgt"
+    title="section 5.1."><strong>5.1.</strong></a>
+
+   <li>clip, <a href="#ClipProperty"
+    title="section 7.3."><strong>7.3.</strong></a>
+
+   <li>clipPath, <a href="#clippath"
+    title="section 7.4."><strong>7.4.</strong></a>
+
+   <li>clip-path, <a href="#clip-path"
+    title="section 7.1."><strong>7.1.</strong></a>
+
+   <li>clip-rule, <a href="#clip-rule"
+    title="section 7.2."><strong>7.2.</strong></a>
+
+   <li>&lt;clip-source&gt;, <a href="#ltclip-sourcegt"
+    title="section 7.1."><strong>7.1.</strong></a>
+
+   <li>‘<code class=css>&lt;compound-selector&gt;</code>’, <a
+    href="#ltcompound-selectorgt"
+    title="section 5.1."><strong>5.1.</strong></a>
+
+   <li>''content-box''
+    <ul>
+     <li>'mask-clip' value, <a href="#content-box"
+      title="section 5.5."><strong>5.5.</strong></a>
+    </ul>
+
+   <li>‘<code class=css>content-box</code>’, <a href="#content-box0"
+    title="section 5.6."><strong>5.6.</strong></a>
+
+   <li>‘<code class=css>evenodd</code>’, <a href="#evenodd"
+    title="section 7.2."><strong>7.2.</strong></a>
+
+   <li>&lt;image&gt;, <a href="#ltimagegt"
+    title="section 5.1."><strong>5.1.</strong></a>
+
+   <li>layers, <a href="#layers" title="section 5.11.1.">5.11.1.</a>
+
+   <li>&lt;left&gt;, <a href="#ltleftgt"
+    title="section 7.3."><strong>7.3.</strong></a>
+
+   <li>local coordinate system, <a href="#local-coordinate-system"
+    title="section 4."><strong>4.</strong></a>
+
+   <li>‘<code class=css>luminance</code>’, <a href="#luminance"
+    title="section 5.2."><strong>5.2.</strong></a>
+
+   <li>mask, <a href="#MaskProperty"
+    title="section 5.8."><strong>5.8.</strong></a>, <a href="#mask"
+    title="section 5.10."><strong>5.10.</strong></a>, <a href="#mask0"
+    title="section 4."><strong>4.</strong></a>
+
+   <li>mask-box-image, <a href="#mask-box-image"
+    title="section 6.6."><strong>6.6.</strong></a>
+
+   <li>mask box image area, <a href="#mask-box-image-area"
+    title="section 4."><strong>4.</strong></a>, <a
+    href="#mask-box-image-area0"
+    title="section 6.4."><strong>6.4.</strong></a>
+
+   <li>mask-box-image-outset, <a href="#mask-box-image-outset"
+    title="section 6.4."><strong>6.4.</strong></a>
+
+   <li>mask-box-image-repeat, <a href="#mask-box-image-repeat"
+    title="section 6.5."><strong>6.5.</strong></a>
+
+   <li>mask-box-image-slice, <a href="#mask-box-image-slice"
+    title="section 6.2."><strong>6.2.</strong></a>
+
+   <li>mask-box-image-source, <a href="#mask-box-image-source"
+    title="section 6.1."><strong>6.1.</strong></a>
+
+   <li>mask-box-image-width, <a href="#mask-box-image-width"
+    title="section 6.3."><strong>6.3.</strong></a>
+
+   <li>mask-clip, <a href="#mask-clip"
+    title="section 5.5."><strong>5.5.</strong></a>
+
+   <li>&lt;mask-image&gt;, <a href="#ltmask-imagegt"
+    title="section 5.1."><strong>5.1.</strong></a>
+
+   <li>mask-image, <a href="#mask-image"
+    title="section 5.1."><strong>5.1.</strong></a>
+
+   <li>mask image area, <a href="#mask-image-area" title="section 6.">6.</a>
+
+   <li>mask images, <a href="#mask-images"
+    title="section 4."><strong>4.</strong></a>
+
+   <li>&lt;mask-layer&gt;, <a href="#ltmask-layergt"
+    title="section 5.8."><strong>5.8.</strong></a>
+
+   <li>mask-origin, <a href="#mask-origin"
+    title="section 5.6."><strong>5.6.</strong></a>
+
+   <li>mask painting area, <a href="#mask-painting-area"
+    title="section 5.5."><strong>5.5.</strong></a>, <a
+    href="#mask-painting-area0" title="section 4."><strong>4.</strong></a>,
+    <a href="#mask-painting-area1" title="section 5.3.">5.3.</a>, <a
+    href="#mask-painting-area2" title="section 5.4.">5.4.</a>
+
+   <li>mask-position, <a href="#mask-position"
+    title="section 4."><strong>4.</strong></a>, <a href="#mask-position0"
+    title="section 5.4."><strong>5.4.</strong></a>
+
+   <li>mask positioning area, <a href="#mask-positioning-area"
+    title="section 5.6."><strong>5.6.</strong></a>, <a
+    href="#mask-positioning-area0" title="section 4."><strong>4.</strong></a>
+
+   <li>&lt;mask-reference&gt;, <a href="#ltmask-referencegt"
+    title="section 5.1."><strong>5.1.</strong></a>
+
+   <li>mask-repeat, <a href="#mask-repeat"
+    title="section 5.3."><strong>5.3.</strong></a>
+
+   <li>mask-size, <a href="#mask-size"
+    title="section 4."><strong>4.</strong></a>, <a href="#mask-size0"
+    title="section 5.7."><strong>5.7.</strong></a>
+
+   <li>&lt;mask-source&gt;, <a href="#ltmask-sourcegt"
+    title="section 5.1."><strong>5.1.</strong></a>
+
+   <li>mask source, <a href="#mask-source"
+    title="section 4."><strong>4.</strong></a>
+
+   <li>mask-source-type, <a href="#mask-source-type"
+    title="section 5.2."><strong>5.2.</strong></a>
+
+   <li>mask-type, <a href="#mask-type"
+    title="section 5.9."><strong>5.9.</strong></a>
+
+   <li>''no-clip''
+    <ul>
+     <li>'mask-clip' value, <a href="#no-clip"
+      title="section 5.5."><strong>5.5.</strong></a>
+    </ul>
+
+   <li>‘<code class=css>nonzero</code>’, <a href="#nonzero"
+    title="section 7.2."><strong>7.2.</strong></a>
+
+   <li>object bounding box units, <a href="#object-bounding-box-units"
+    title="section 4."><strong>4.</strong></a>, <a
+    href="#object-bounding-box-units0" title="section 7.4.">7.4.</a>
+
+   <li>''padding-box''
+    <ul>
+     <li>'mask-clip' value, <a href="#padding-box"
+      title="section 5.5."><strong>5.5.</strong></a>
+
+     <li>'mask-origin' value, <a href="#padding-box0"
+      title="section 5.6."><strong>5.6.</strong></a>
+    </ul>
+
+   <li>renderer, <a href="#renderer"
+    title="section 10.1."><strong>10.1.</strong></a>
+
+   <li>&lt;right&gt;, <a href="#ltrightgt"
+    title="section 7.3."><strong>7.3.</strong></a>
+
+   <li><var>&lt;source-type&gt;</var>, <a href="#ltsource-typegt"
+    title="section 5.2."><strong>5.2.</strong></a>
+
+   <li>style sheet
+    <ul>
+     <li>as conformance class, <a href="#style-sheet"
+      title="section 10.1."><strong>10.1.</strong></a>
+    </ul>
+
+   <li>&lt;top&gt;, <a href="#lttopgt"
+    title="section 7.3."><strong>7.3.</strong></a>
+
+   <li>‘<code class=css>&lt;url&gt;</code>’, <a href="#lturlgt"
+    title="section 5.1."><strong>5.1.</strong></a>
+
+   <li>user coordinate system, <a href="#user-coordinate-system"
+    title="section 4."><strong>4.</strong></a>
+  </ul>
+  <!--end-index-->
 </html>
 <!-- Keep this comment at the end of the file
 Local variables:
