@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-05-23  Dirk Schulze  <dschulze@adobe.com>
+- Switch order of index and property index.
+
 2013-05-22  Dirk Schulze  <dschulze@adobe.com>
 - Clarify that <defs> elements are not going to be masked/clipped.
 - Added section about changes since the last publication.
